[package]
name = "amiigen-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiigen = { path = "../amiigen" }
amiitool-rs = { path = "../amiitool-rs" }
clap = { version = "3.2.6", features = ["derive"] }
